--- a/.env
+++ b/.env
@@ -16,16 +16,18 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=08f93a26fbc2fba4c86127f09e7a0e71
+APP_SECRET=dummy_s3cr3t
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DB_NAME=deckfactory_testing
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_DRIVER=pdo_mysql
+DB_VERSION=
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
