--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,10 +1,14 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+        dbname: '%env(DB_NAME)%'
+        host: '%env(DB_HOST)%'
+        port: '%env(DB_PORT)%'
+        user: '%env(DB_USER)%'
+        password: '%env(DB_PASSWORD)%'
+        driver: '%env(DB_DRIVER)%'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '15'
+        server_version: '%env(DB_VERSION)%'
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
